--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bulma": "^0.8.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
